[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "oudjat"
version = "0.7.2a1"
description = "Oudjat is a SOC toolbox and maybe more if I have the time"
readme = "README.md"
requires-python = ">=3.0"

authors = [
  { name = "me1k0r", email = "runner-me1k0r@proton.me" }
]

licence = { file = "LICENSE" }

dependencies = {
  "setuptools"
  "docopt"
  "lxml"
  "ldap3"
  "beautifulsoup4"
  "requests"
  "keyring"
}

[project.optional-dependencies]
tenable = ["pytenable"]
